--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -19,8 +19,8 @@
             <div class="card card-body">
                 <h5>Contact Information</h5>
                 <hr>
-                <p>Email: </p>
-                <p>Phone: </p>
+                <p>Email: {{customer.email}} </p>
+                <p>Phone: {{customer.phone}} </p>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
             <div class="card card-body">
                 <h5>Total Orders</h5>
                 <hr>
-                <h1 style="text-align: center;padding: 10px"></h1>
+                <h1 style="text-align: center;padding: 10px">{{total_order}}</h1>
             </div>
         </div>
     </div>
@@ -60,7 +60,16 @@
                         <th>Update</th>
                         <th>Remove</th>
                     </tr>
-
+                    {% for order in orders %}
+                        <tr>
+                            <th>{{order.product}}</th>
+                            <th>{{order.product.category}}</th>
+                            <th>{{order.date_created}}</th>
+                            <th>{{order.status}}</th>
+                            <th><a href="" class="btn btn-info">Update</a></th>
+                            <th><a href="" class="btn btn-danger">Delete</a></th>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
