--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -9,24 +9,42 @@
             <hr>
             <div class="card card-body">
                 <a href="" class="btn btn-primary btn-sm btn-block">Create Customer</a>
-                <table class="table table-sm">
-                    <th></th>
-                    <th>Customer</th>
-                    <th>Orders</th>
+                <table class="table table-sm text-center">
+                    <tr>
+                        <th>Customer</th>
+                        <th>Phone No</th>
+                        <th>Action</th>
+                    </tr>
+                    {% for customer in customers%}
+                        <tr>
+                            <td>{{customer.name}}</td>
+                            <td>{{customer.phone}}</td>
+                            <td><a href="{% url 'customer' customer.id %}" class="btn btn-sm btn-primary mr-2">View</a><a href="" class="btn btn-danger mr-2">Delete</a></td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
         <div class="col-md-7">
             <h5>LAST 5 ORDERS</h5>
             <hr>
-            <div class="card card-body">
+            <div class="card card-body ">
                 <a href="" class="btn btn-primary btn-sm btn-block">Create Order</a>
-                <table class="table table-sm">
-                    <th>Product</th>
-                    <th>Date Orderd</th>
-                    <th>Status</th>
-                    <th>Update</th>
-                    <th>Remove</th>
+                <table class="table table-sm text-center">
+                    <tr>
+                        <th>Product</th>
+                        <th>Date Orderd</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                    {% for order in orders %}
+                        <tr>
+                            <th>{{order.product}}</th>
+                            <th>{{order.date_created}}</th>
+                            <th>{{order.status}}</th>
+                            <th><a href="" class="btn btn-primary mr-2">Update</a><a href="" class="btn btn-danger">Delate</a></th>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
