--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -8,13 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard </span></a>
+          <a class="nav-link" href="{% url 'home' %}">Dashboard </span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Customers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
