--- a/accounts/templates/accounts/product.html
+++ b/accounts/templates/accounts/product.html
@@ -8,12 +8,21 @@
                 <h5>Products</h5>
             </div>
             <div class="card-body">
-                <table class="table">
+                <table class="table text-center">
                     <tr>
                         <th>Product</th>
                         <th>Category</th>
                         <th>Price</th>
+                        <th>Action</th>
                     </tr>
+                    {% for i in products %}
+                        <tr>
+                            <td>{{i.name}}</td>
+                            <td>{{i.category}}</td>
+                            <td>{{i.price}}</td>
+                            <td><a href="" class="btn btn-info mr-2">Edit</a><a href="" class="btn btn-danger">Delete</a></td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
