--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -10,7 +10,7 @@
                 <h5>Customer:</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+                <a href="{% url 'order_form' customer.id %}" class="btn btn-primary btn-sm btn-block">Place Order</a>
 
             </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="col">
             <div class="card card-body">
                 <form method="get">
-
+                {{ myFilter.form }}
                 <button class="btn btn-primary" type="submit">Search</button>
             </form>
             </div>
@@ -51,14 +51,13 @@
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
-                <table class="table table-sm">
+                <table class="table table-sm text-center">
                     <tr>
                         <th>Product</th>
                         <th>Category</th>
                         <th>Date Orderd</th>
                         <th>Status</th>
-                        <th>Update</th>
-                        <th>Remove</th>
+                        <th>Action</th>
                     </tr>
                     {% for order in orders %}
                         <tr>
@@ -66,8 +65,7 @@
                             <th>{{order.product.category}}</th>
                             <th>{{order.date_created}}</th>
                             <th>{{order.status}}</th>
-                            <th><a href="" class="btn btn-info">Update</a></th>
-                            <th><a href="" class="btn btn-danger">Delete</a></th>
+                            <th><a href="{% url 'update_form' order.id %}" class="btn btn-primary mr-2">Update</a><a href="{% url 'delete_order' order.id %}" class="btn btn-danger">Delate</a></th>
                         </tr>
                     {% endfor %}
                 </table>
