--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -29,7 +29,6 @@
             <h5>LAST 5 ORDERS</h5>
             <hr>
             <div class="card card-body ">
-                <a href="" class="btn btn-primary btn-sm btn-block">Create Order</a>
                 <table class="table table-sm text-center">
                     <tr>
                         <th>Product</th>
@@ -42,7 +41,7 @@
                             <th>{{order.product}}</th>
                             <th>{{order.date_created}}</th>
                             <th>{{order.status}}</th>
-                            <th><a href="" class="btn btn-primary mr-2">Update</a><a href="" class="btn btn-danger">Delate</a></th>
+                            <th><a href="{% url 'update_form' order.id %}" class="btn btn-primary mr-2">Update</a><a href="{% url 'delete_order' order.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?')">Delate</a></th>
                         </tr>
                     {% endfor %}
                 </table>
