--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,4 +1,14 @@
 {% load static %}
+
+<style>
+  .hello-msg{
+    font-size: 18px;
+    color: green;
+    margin-right: 20px;
+  }
+</style>
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href=""><img src="{% static "images/logo.png" %}" alt="My image"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,9 +24,9 @@
           <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+
+        <span class="hello-msg">Hello, {{request.user}} </span> 
+        <span><a class="btn btn-danger" href="{% url 'logout' %}"> Logout</a></span>
+
     </div>
   </nav>
